# coloom

./: .gitignore  CLAUDE.md  README.md  coloom.example.yaml  pyproject.toml
docs/: HISTORY.md  PLAN.md  events-api.md  generators-api.md  optimistic-state.md  setups-api.md  tapestry-viewer-audit.md
docs/ui-specs/: canvas.md  lists.md  shared-state.md  shell-menus-graph.md  textedit.md
scripts/: backup_coloom_live.sh  seed_dev_weave.py
scripts/small-smokes/: screenshot_ui.py  smoke_click_hover_buttons.py  smoke_coweave_e2e.py  smoke_generate.py  smoke_migration_dryrun.py  smoke_no_cursor_flicker.py  smoke_ws_live_ui.py
src/coloom/: __init__.py  cli.py  config.py  fake_openai.py  generators.py  inference.py  models.py  setups.py  store.py
src/coloom/deprecated/: CLAUDE.md
src/coloom/server/: __main__.py  app.py
tests/: conftest.py  test_cli.py  test_fake_openai.py  test_gen_retry.py  test_generators.py  test_inference.py  test_live_events.py  test_merge.py  test_profiles.py  test_server.py  test_setups.py  test_store.py
tests/fixtures/: gpt4base_completion.json
tests/ui/: conftest.py  test_activity_feed.py  test_canvas.py  test_editing.py  test_gen_placeholders.py  test_generators_ui.py  test_graph.py  test_interact.py  test_keybindings.py  test_lists.py  test_livesync.py  test_merge.py  test_multiselect.py  test_panes.py  test_paste_then_edit.py  test_picker.py  test_profiles_ui.py  test_quick_row.py  test_setups_ui.py  test_textpane.py  test_undo.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  app.css
(+41 files in other folders)
